--- a/matches.html
+++ b/matches.html
@@ -26,6 +26,10 @@
     </header>
 
     <main class="matches-main">
+        <div class="loader-container" id="loading" style="display: none;">
+    <div class="loader"></div>
+    <p>جاري تحميل البيانات...</p>
+</div>
         <div class="matches-layout">
             <!-- القسم الأيسر - المباريات المميزة -->
             <section class="featured-section">
