--- a/matches.html
+++ b/matches.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>المباريات | Football Matches Tracker</title>
-    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/matches.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -75,9 +74,24 @@
         </section>
     </main>
 
-    <footer class="footer">
-        <p>حقوق النشر © <span id="current-year"></span> - جميع الحقوق محفوظة</p>
-    </footer>
+     <!-- الفوتر -->
+ <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-logo">
+        <a href="#top-of-page" class="logo-text">Foot TV</a>
+      
+    </div>
+    <div class="footer-links">
+      <a href="index.html"><i class="fas fa-home"></i> الرئيسية</a>
+      <a href="news.html"><i class="fas fa-newspaper"></i> الأخبار</a>
+      <a href="matches.html"><i class="fas fa-futbol"></i> المباريات</a>
+      <a href="videos.html"><i class="fas fa-video"></i> الفيديوهات</a>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>حقوق النشر © <span id="current-year"></span> Foot TV - جميع الحقوق محفوظة</p>
+  </div>
+</footer>
 
     <script type="module" src="assets/js/matches.js"></script>
 </body>
