--- a/watch.html
+++ b/watch.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مشاهدة المباراة | matches.news</title>
-    <link rel="stylesheet" href="css/watch.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+  <link rel="stylesheet" href="assets/css/watch.css">
+  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <!-- نفس ستايل صفحة news.html -->
 </head>
 <body>
