--- a/watch.html
+++ b/watch.html
@@ -4,92 +4,163 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مشاهدة المباراة | matches.news</title>
-    <link rel="stylesheet" href="assets/css/footer.css">
-  <link rel="stylesheet" href="assets/css/watch.css">
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <!-- نفس ستايل صفحة news.html -->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/watch.css">
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <!-- نفس هيدر صفحة news.html -->
+    <header class="main-header">
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="assets/images/logo-white.png" alt="Matches News Logo">
+                </a>
+            </div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="index.html">الرئيسية</a></li>
+                    <li><a href="matches.html">المباريات</a></li>
+                    <li><a href="news.html">الأخبار</a></li>
+                    <li><a href="news-videos.html">الفيديوهات</a></li>
+                </ul>
+            </nav>
+            <div class="mobile-menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
     </header>
 
     <main class="match-container">
-        <!-- قسم الفيديو -->
-        <section class="video-section">
-            <div class="video-container" id="main-video">
-                <!-- سيتم حقن الفيديو عبر JavaScript -->
-                <div class="loading">جاري تحميل البث المباشر...</div>
-            </div>
-            
-            <div class="match-controls">
-                <button class="quality-btn">الجودة <span>HD</span></button>
-                <button class="fullscreen-btn">ملء الشاشة</button>
-            </div>
-        </section>
+        <div class="match-content">
+            <!-- قسم الفيديو -->
+            <section class="video-section">
+                <div class="video-container" id="main-video">
+                    <div class="loading-spinner">
+                        <div class="spinner"></div>
+                        <p>جاري تحميل البث المباشر...</p>
+                    </div>
+                </div>
+                
+                <div class="match-controls">
+                    <button class="control-btn quality-btn">
+                        <i class="fas fa-tachometer-alt"></i>
+                        <span class="quality-text">HD</span>
+                    </button>
+                    <button class="control-btn fullscreen-btn">
+                        <i class="fas fa-expand"></i>
+                    </button>
+                </div>
+            </section>
 
-        <!-- معلومات المباراة -->
-        <section class="match-info">
-            <div class="teams-info">
-                <div class="team home-team">
-                    <img src="" alt="الفريق المضيف" id="home-logo">
-                    <h3 id="home-name">فريق 1</h3>
+            <!-- معلومات المباراة -->
+            <section class="match-info-section">
+                <div class="teams-info">
+                    <div class="team home-team">
+                        <img src="assets/images/default-team.png" alt="الفريق المضيف" id="home-logo">
+                        <h3 id="home-name">فريق 1</h3>
+                    </div>
+                    <div class="match-score-time">
+                        <div class="match-score">
+                            <span id="home-score">0</span>
+                            <span class="score-separator">-</span>
+                            <span id="away-score">0</span>
+                        </div>
+                        <div class="match-time" id="match-time">45:00</div>
+                    </div>
+                    <div class="team away-team">
+                        <img src="assets/images/default-team.png" alt="الفريق الضيف" id="away-logo">
+                        <h3 id="away-name">فريق 2</h3>
+                    </div>
                 </div>
-                <div class="match-score">
-                    <span id="home-score">0</span> - 
-                    <span id="away-score">0</span>
-                    <div class="match-time" id="match-time">45:00</div>
-                </div>
-                <div class="team away-team">
-                    <img src="" alt="الفريق الضيف" id="away-logo">
-                    <h3 id="away-name">فريق 2</h3>
-                </div>
-            </div>
 
-            <div class="match-details">
-                <div class="detail">
-                    <span>البطولة:</span>
-                    <span id="league">الدوري الممتاز</span>
+                <div class="match-details">
+                    <div class="detail-item">
+                        <span class="detail-label">البطولة:</span>
+                        <span class="detail-value" id="league">الدوري الممتاز</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">الملعب:</span>
+                        <span class="detail-value" id="stadium">ملعب المدينة</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">الحكم:</span>
+                        <span class="detail-value" id="referee">محمد عبد الله</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">التاريخ:</span>
+                        <span class="detail-value" id="match-date">20 نوفمبر 2023</span>
+                    </div>
                 </div>
-                <div class="detail">
-                    <span>الملعب:</span>
-                    <span id="stadium">ملعب المدينة</span>
-                </div>
-                <div class="detail">
-                    <span>الحكم:</span>
-                    <span id="referee">محمد عبد الله</span>
-                </div>
-            </div>
-        </section>
+            </section>
 
-        <!-- إحصائيات المباراة -->
-        <section class="match-stats">
-            <h3>إحصائيات المباراة</h3>
-            <div class="stats-container">
-                <div class="stat-item">
-                    <div class="stat home-stat" style="width: 60%"></div>
-                    <div class="stat-name">تسديدات</div>
-                    <div class="stat away-stat" style="width: 40%"></div>
-                </div>
-                <!-- المزيد من الإحصائيات -->
-            </div>
-        </section>
+            <!-- إحصائيات وأحداث المباراة -->
+            <div class="stats-events-container">
+                <!-- إحصائيات المباراة -->
+                <section class="match-stats-section">
+                    <h3 class="section-title"><i class="fas fa-chart-bar"></i> إحصائيات المباراة</h3>
+                    <div class="stats-container" id="match-stats">
+                        <!-- سيتم ملؤها عبر JavaScript -->
+                    </div>
+                </section>
 
-        <!-- أحداث المباراة -->
-        <section class="match-events">
-            <h3>أحداث المباراة</h3>
-            <div class="events-timeline" id="events-timeline">
-                <!-- سيتم ملؤها عبر JavaScript -->
+                <!-- أحداث المباراة -->
+                <section class="match-events-section">
+                    <h3 class="section-title"><i class="fas fa-list-ul"></i> أحداث المباراة</h3>
+                    <div class="events-timeline" id="events-timeline">
+                        <!-- سيتم ملؤها عبر JavaScript -->
+                    </div>
+                </section>
             </div>
-        </section>
+        </div>
     </main>
 
-    <footer>
-        <!-- نفس فوتر صفحة news.html -->
+    <footer class="main-footer">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img src="assets/images/logo.png" alt="Matches News Logo">
+            </div>
+            <div class="footer-links">
+                <div class="links-section">
+                    <h4>روابط سريعة</h4>
+                    <ul>
+                        <li><a href="index.html">الرئيسية</a></li>
+                        <li><a href="matches.html">المباريات</a></li>
+                        <li><a href="news.html">الأخبار</a></li>
+                        <li><a href="news-videos.html">الفيديوهات</a></li>
+                    </ul>
+                </div>
+                <div class="links-section">
+                    <h4>الدوريات</h4>
+                    <ul>
+                        <li><a href="#">الدوري السعودي</a></li>
+                        <li><a href="#">الدوري الإنجليزي</a></li>
+                        <li><a href="#">دوري أبطال أوروبا</a></li>
+                        <li><a href="#">كأس العالم</a></li>
+                    </ul>
+                </div>
+                <div class="links-section">
+                    <h4>اتصل بنا</h4>
+                    <ul>
+                        <li><a href="#"><i class="fas fa-envelope"></i> info@matches.news</a></li>
+                        <li><a href="#"><i class="fas fa-phone"></i> +966 12 345 6789</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <p>© 2023 matches.news جميع الحقوق محفوظة</p>
+        </div>
     </footer>
 
-    <script src="js/watch.js"></script>
+    <script src="assets/js/watch.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
