--- a/assets/streams/bein-sports-hd1.html
+++ b/assets/streams/bein-sports-hd1.html
@@ -10,10 +10,7 @@
 </head>
 <body>
     <!-- البث المباشر من المصدر الرسمي -->
-    <iframe src="https://demphil.github.io/beinsports1/" 
-            allowfullscreen 
-            allow="autoplay; encrypted-media">
-    </iframe>
+    <iframe allowfullscreen="true" frameborder="0" height="500px" scrolling="1" src="https://demphil.github.io/live-stream/" width="100%"></iframe>
     
     <script>
         // كود لتحديث البث تلقائيًا إذا انقطع
