--- a/watch.html
+++ b/watch.html
@@ -161,6 +161,7 @@
     </footer>
 
     <script src="assets/js/watch.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
