--- a/matches.html
+++ b/matches.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="assets/css/matches.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link rel="preload" href="assets/images/logo.png" as="image">
-    <link rel="preload" href="assets/images/default-team.png" as="image">
-    <link rel="preload" href="assets/images/default-league.png" as="image">
+    <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
 </head>
 <body>
     <header class="header">
