--- a/matches.html
+++ b/matches.html
@@ -25,8 +25,7 @@
     </header>
 
     <main class="matches-main">
-        <div class="loader-container" id="loading" style="display: none;">
-    <div class="loader"></div>
+<div class="loader-container" id="loading" style="display: none;">    <div class="loader"></div>
     <p>جاري تحميل البيانات...</p>
 </div>
         <div class="matches-layout">
