--- a/matches.html
+++ b/matches.html
@@ -25,8 +25,10 @@
     </header>
 
     <main class="matches-main">
-<div class="loader-container" id="loading" style="display: none;">    <div class="loader"></div>
+<div class="loader-container" id="loading" style="display: none;">    
     <p>جاري تحميل البيانات...</p>
+<div class="loader">
+</div>
 </div>
         <div class="matches-layout">
             <!-- القسم الأيسر - المباريات المميزة -->
