--- a/watch.html
+++ b/watch.html
@@ -144,7 +144,7 @@
                     <h4>اتصل بنا</h4>
                     <ul>
                         <li><a href="#"><i class="fas fa-envelope"></i> info@matches.news</a></li>
-                        <li><a href="#"><i class="fas fa-phone"></i> +966 12 345 6789</a></li>
+                        <li><a href="#"><i class="fas fa-phone"></i> +666</a></li>
                     </ul>
                 </div>
             </div>
@@ -159,7 +159,11 @@
             <p>© 2023 matches.news جميع الحقوق محفوظة</p>
         </div>
     </footer>
-
+    <script>
+const params = new URLSearchParams(window.location.search);
+const matchId = params.get('id');
+const channel = params.get('channel');
+    </script>
     <script src="assets/js/watch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="assets/js/main.js"></script>
