--- a/assets/streams/watch.html
+++ b/assets/streams/watch.html
@@ -91,7 +91,7 @@
   <script>
 const params = new URLSearchParams(window.location.search);
 const matchId = params.get('id');
-const channel = params.get('bein-sports-hd1');
+const channel = params.get('bein SPORTS HD1');
 </script>
 
 </body>
