--- a/watch.html
+++ b/watch.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مشاهدة البث المباشر - كورة لايف</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/watch.css">
-    <link rel="preload" href="js/watch.js" as="script">
+    <link rel="stylesheet" href="assets/js/watch.css">
+    <link rel="preload" href="assets/js/watch.js" as="script">
 </head>
 <body>
     <div class="watch-container">
