--- a/watch.html
+++ b/watch.html
@@ -67,6 +67,6 @@
   </section>
 
   <!-- سكريبتات -->
-  <script src="watch.js"></script>
+  <script src="assets/js/watch.js"></script>
 </body>
 </html>
