--- a/watch.html
+++ b/watch.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>مشاهدة المباراة - كورة لايف</title>
-  <link rel="stylesheet" href="watch.css" />
+  <link rel="stylesheet" href="assets/css/watch.css" />
   <link rel="stylesheet" href="assets/css/shared.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
