--- a/watch.html
+++ b/watch.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>مشاهدة المباراة</title>
-  <link rel="stylesheet" href="watch.css">
+  <link rel="stylesheet" href="assets/css/watch.css">
 </head>
 <body>
   <div id="watch-container"></div>
