--- a/watch.html
+++ b/watch.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="assets/css/watch.css">
 </head>
 <body>
- <div id="loading">
+<div id="loading">
     <div class="spinner"></div>
     <p>جارٍ تحميل البث المباشر...</p>
 </div>
@@ -24,6 +24,14 @@
 </div>
 
 <div id="player-container"></div>
+
+<!-- معلومات القناة (اختياري) -->
+<div class="channel-info">
+    <img id="channel-logo" src="" alt="شعار القناة">
+    <span id="channel-name"></span>
+</div>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
